Add images for 2025

--- a/content/2025.md
+++ b/content/2025.md
@@ -63,6 +63,8 @@ schedule:
        time: 18:00
 ---
 
+{{< image path=img/2025/group.jpg width=300 alt="Group Image" >}}
+
 The (un)conference about Free Software and Open Data for mobility and public transport.
 
 **SOLD OUT** Location limits have been reached. Registration is no longer possible.
@@ -97,6 +99,8 @@ See the <a href="#schedule">conference schedule</a> below for more details.
 {{< buttonlink href="/cfp" >}}
 Call for Participation
 {{< /buttonlink >}}
+
+{{< image path=img/2025/vote.jpg width=300 alt="Voting process" >}}
 
 ## You have questions or want to contribute?
 
